--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -13,8 +13,16 @@
   <body>
     <a href="/">Home</a>
     <a href="/about/">About</a>
-	<a href="/blog/">Blog</a>
+    <a href="/blog/">Blog</a>
 
-    <h1>My Astro site</h1>
+    <h1>About Me</h1>
+    <h2>... and the C# WPF</h2>
+
+    <p>C# WPF ist schon ziemlich nice</p>
+
+    <p>
+      This site will update as I complete more of the tutorial, so keep checking
+      back and see how my journey is going!
+    </p>
   </body>
 </html>
