--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -13,8 +13,15 @@
   <body>
     <a href="/">Home</a>
     <a href="/about/">About</a>
-	<a href="/blog/">Blog</a>
+    <a href="/blog/">Blog</a>
 
-    <h1>My Astro site</h1>
+    <h1>Mein Blog</h1>
+
+    <p>
+      Meine Stadt, mein Bezirk,<br />
+      mein Viertel, meine Gegend <br />
+      Meine Straße, mein Zuhause <br />
+      <b>mein Blog</b>
+    </p>
   </body>
 </html>
